--- a/quiz/index.html
+++ b/quiz/index.html
@@ -16,7 +16,7 @@
   <div class="game-container">
     <div class="instructions">
       <p><strong>Atenção!</strong> Leia com cuidado e responda rápido!</p>
-      <p>Uma única pergunta. Cinco alternativas. O tempo está correndo! ⏱️</p>
+      <p>Uma única pergunta. Quatro alternativas. O tempo está correndo! ⏱️</p>
     </div>
 
     <!-- Timer Visual -->
